Formatage du code source

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -54,8 +54,9 @@
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 		<!-- <param-value>Production</param-value> -->
-	</context-param><context-param>
-        <param-name>org.apache.myfaces.annotation.SCAN_PACKAGES</param-name>
-        <param-value>jsfapp</param-value>
-    </context-param>
+	</context-param>
+	<context-param>
+		<param-name>org.apache.myfaces.annotation.SCAN_PACKAGES</param-name>
+		<param-value>jsfapp</param-value>
+	</context-param>
 </web-app>
